<?xml version="1.0" encoding="utf-8"?>
<com.sonymobile.ui.BlindsView.BlindsView 
    xmlns:android="http://schemas.android.com/apk/res/android"
 
	android:id="@+id/blindsview"
	android:layout_width= "match_parent"
	android:layout_height= "match_parent"
	android:gravity= "center"
	android:orientation= "vertical" >
	<TextView android:id="@+id/largeTextBox" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:gravity="center_horizontal" 
		android:shadowColor="#000000" 
		android:shadowRadius="4" 
		android:text="@string/dummy_text_large" 
		android:textAppearance="?android:attr/textAppearanceLarge" 
		android:typeface="sans" /> 
	  <TextView android:id="@+id/MediumTextBox" 
	      android:layout_width="match_parent" 
	      android:layout_height="wrap_content" 
	      android:gravity="center_horizontal" 
	      android:shadowColor="#000000" 
	      android:shadowRadius="4" 
	      android:text="@string/dummy_text_medium" 
	      android:textAppearance="?android:attr/textAppearanceMedium" 
	      android:typeface="sans" /> 
	  <TextView android:id="@+id/SmallTextBox" 
	      android:layout_width="match_parent" 
	      android:layout_height="wrap_content" 
	      android:gravity="center_horizontal" 
	      android:shadowColor="#000000" 
	      android:shadowRadius="1" 
	      android:text="@string/dummy_text_small" 
	      android:textAppearance="?android:attr/textAppearanceSmall" 
	      android:typeface="sans" /> 
	<LinearLayout 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:gravity="center_horizontal" 
	    android:orientation="vertical" 
	    android:paddingTop="15dp">
	  
	  	<Button 
	  	    android:id="@+id/dummybutton1" 
	  	    style="?android:attr/buttonStyleSmall" 
	  	    android:layout_width="match_parent" 
	  	    android:layout_height="wrap_content" 
	  	    android:text="@string/dummy_button_one" /> 
	  	<Button 
	  	    android:id="@+id/dummybutton2" 
	  	    style="?android:attr/buttonStyleSmall" 
	  	    android:layout_width="match_parent" 
	  	    android:layout_height="wrap_content" 
	  	    android:text="@string/dummy_button_two" /> 
	  </LinearLayout>

	 
 </com.sonymobile.ui.BlindsView.BlindsView >